# autoware_universe

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  build_depends.humble.repos  build_depends.repos  build_depends_humble.repos  build_depends_nightly.repos  build_depends_stable.repos  diff_control.txt  diff_universe.txt  sync_workflows.py  versions.json  workflow_sync_setting.yaml
common/autoware_agnocast_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_agnocast_wrapper/cmake/: agnocast_wrapper_config_extras.cmake  autoware_agnocast_wrapper_register_node.cmake
common/autoware_agnocast_wrapper/launch/: agnocast_env.launch.xml
common/autoware_agnocast_wrapper/src/: node.cpp
common/autoware_agnocast_wrapper/templates/: node_main_switchable.cpp.in
common/autoware_boundary_departure_checker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_boundary_departure_checker/schema/: boundary_departure_checker.schema.json
common/autoware_boundary_departure_checker/src/: boundary_departure_checker.cpp  boundary_departure_checker_abnormality.cpp  boundary_departure_evaluator.cpp  boundary_segment_finder.cpp  conversion.cpp  debug.cpp  footprints_generator.cpp  geometry_projection.cpp  hysteresis_logic.cpp  severity_evaluator.cpp  uncrossable_boundaries_rtree.cpp  uncrossable_boundary_checker.cpp  uncrossable_boundary_departure_checker.cpp  utils.cpp
common/autoware_boundary_departure_checker/test/: test_create_vehicle_footprints.cpp  test_get_closest_projections.cpp  test_plot_utils.cpp  test_plot_utils.hpp  test_uncrossable_boundary_checker.cpp
common/autoware_component_interface_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_component_interface_tools/launch/: service_log_checker.launch.xml
common/autoware_component_interface_tools/src/: service_log_checker.cpp  service_log_checker.hpp
common/autoware_path_distance_calculator/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_path_distance_calculator/src/: path_distance_calculator.cpp  path_distance_calculator.hpp
control/autoware_external_cmd_selector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
control/autoware_lane_departure_checker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
control/autoware_lane_departure_checker/test/: test_calc_max_search_length_for_boundaries.cpp  test_create_vehicle_footprints.cpp
control/autoware_mpc_controller/: .gitignore  CMakeLists.txt  README.md  package.xml
control/autoware_mpc_controller/acados_mpc/: CMakeLists.txt  Untitled  acados_interface.cpp  acados_interface.hpp  acados_longitudinal_interface.cpp  acados_longitudinal_interface.hpp
control/autoware_mpc_controller/config/: mpc_controller_node.param.yaml
control/autoware_mpc_controller/docs/: longitudinal_inferred_model.md  replace_controllers.md
control/autoware_mpc_controller/generators/: acados_ocp.json  acados_ocp_lateral.json  combined_longitudinal_lateral_model.py  lateral_mpc_curvilinear.py  longitudinal_mpc.py  longitudinal_only_model.py  mpc.py  mpc_longitudinal_only.py  step_response_dynamics.py  validate_circular_path.py  validate_straight_line.py
control/autoware_mpc_controller/launch/: mpc_controller.launch.xml
control/autoware_mpc_controller/scripts/: plot_reference_curvature.py  visualize_mpc_control.py
control/autoware_mpc_controller/src/: longitudinal_mpc_controller.cpp  node.cpp
control/constant_acceleration_controller/: CMakeLists.txt  package.xml
control/constant_acceleration_controller/scripts/: constant_acceleration_tester.py
control/constant_acceleration_controller/src/: constant_acceleration_controller.cpp
control/lane_departure_checker/: CMakeLists.txt  README.md  package.xml
control/lane_departure_checker/config/: lane_departure_checker.param.yaml
control/lane_departure_checker/test/: test_lane_departure_checker.cpp
dummy/dummy_gear_cmd_publisher/: CMakeLists.txt  README.md  package.xml
dummy/dummy_gear_cmd_publisher/launch/: dummy_gear_cmd_publisher.launch.xml
dummy/dummy_gear_cmd_publisher/src/: dummy_gear_cmd_publisher.cpp  dummy_gear_cmd_publisher.hpp
dummy/dummy_operation_mode_publisher/: CMakeLists.txt  README.md  package.xml
evaluator/autoware_planning_evaluator/: CHANGELOG.rst  CMakeLists.txt  README.md  TODO.sh  package.xml
evaluator/autoware_planning_evaluator/config/: planning_evaluator.param.yaml
localization/autoware_pose_instability_detector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_cuda_traffic_light_occlusion_predictor/: BEST_PRACTICES_REVIEW.md  CMakeLists.txt  CODE_SEPARATION.md  COMPLETED_WORK.md  CUDA_BLACKBOARD_MIGRATION_COMPLETE.md  CUDA_BLACKBOARD_MIGRATION_PLAN.md  CURRENT_STATE.md  FILE_ORGANIZATION.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TODOS.md  README.md  REFACTORING_PLAN.md  REMAINING_WORK_PLAN.md  TEST_STATUS.md  TF_OPERATIONS_MOVED.md  package.xml
perception/autoware_detection_by_tracker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_object_sorter/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_perception_filter/: CMakeLists.txt  README.md  package.xml
perception/autoware_raindrop_cluster_filter/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_simple_object_merger/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_tensorrt_yolox/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_arbiter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_id_matcher/: CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_multi_camera_fusion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_visualization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_whole_image_detector/: CMakeLists.txt  README.md  package.xml
perception/crosswalk_traffic_light_estimator/: CMakeLists.txt
(+5052 files in other folders)
