<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_agnocast_wrapper</name>
  <version>0.46.0</version>
  <description>Wrapper macros for Agnocast (true zero-copy communication library)</description>
  <maintainer email="sykwer@gmail.com">Takahiro Ishikawa-Aso</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>agnocastlib</depend>
  <depend>autoware_component_interface_utils</depend>
  <depend>autoware_utils_rclcpp</depend>
  <depend>autoware_utils_tf</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>class_loader</depend>
  <depend>autoware_object_recognition_utils</depend>
  <depend>autoware_utils_diagnostics</depend>
  <depend>autoware_utils_logging</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
