<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>constant_acceleration_controller</name>
  <version>1.0.0</version>
  <description>Constant acceleration longitudinal controller</description>

  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <maintainer email="makoto.kurihara@tier4.jp">Makoto Kurihara</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>trajectory_follower_base</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
